--- a/galleria/index.html
+++ b/galleria/index.html
@@ -8,15 +8,13 @@
         <script src = "galleria.js"></script>
         <style>
             body{
-                background-color: #303841;
+                background-image: url('images/bg.jpg');
+                background-size: 100%;
                 width: 100%;
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
                 flex-direction: column;
-            }
-            #galleria{
-                box-shadow: 0 0 10px #38424D;
             }
             h1{
                 font-family: Merriweather;
