--- a/picturebox/index.html
+++ b/picturebox/index.html
@@ -1,4 +1,4 @@
-<title>LightBox !</title>
+<title>PictureBox !</title>
 <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 
 <!-- Include these three files for lightbox to work -->
@@ -44,7 +44,7 @@
 <body style = "background-color: #222;">
 
 <div class = "title">
-	<p>Awesome jQuery LightBox Demo !</p>
+	<p>PictureBox Demo !</p>
 </div>
 
 <!-- Only This Div Produces the Lightbox. Cool right ?-->
